@@ -1,3 +1,4 @@
+- Fix: A3es teaching services degrees sort order changed
 - Fix: A3es courses upload fixed due to API changes regarding the curricular unit name
 - Refactor: prepare to remove ulisboa-specifications dependency
 
